...
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toEndOf="@+id/friend_rq_profile_picture"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.76" />

        <ImageButton
            android:id="@+id/friend_rq_bt_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/content_description_bt_accept"
            app:layout_constraintBottom_toBottomOf="@+id/friend_rq_profile_picture"
            app:layout_constraintEnd_toStartOf="@+id/friend_rq_bt_reject"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/friend_rq_nickname"
            app:layout_constraintTop_toTopOf="@+id/friend_rq_profile_picture"
            app:srcCompat="@drawable/ic_check_circle_green" />

...
